@@ -1,4 +1,9 @@
 
+ o add subgraph support in Graphviz 
+      (breaks ascendent compatibility if you use Graphviz: by default add
+	 let subgraph _ = None
+       in the argument of Graphviz.Dot and Graphviz.Neato)
+
 version 0.97, July 20th, 2006
 -----------------------------
  o fixed compilation under Windows/Cygwin (contributed by Denis Berthod)
